# robot-software

./: CMakeLists.txt  cmake-format.py
.github/workflows/: cmake-format.yml
actuator-firmware/src/: debug.c  main.c
cmake/: AddCCompilerFlag.cmake  AddCXXCompilerFlag.cmake  FindChibiOS.cmake  FindSDL2.cmake  cvra.cmake  gcc_stm32.cmake  gcc_stm32f0.cmake  gcc_stm32f1.cmake  gcc_stm32f2.cmake  gcc_stm32f3.cmake  gcc_stm32f4.cmake  gcc_stm32f7.cmake  gcc_stm32l0.cmake  gcc_stm32l1.cmake  gcc_stm32l4.cmake  master.cmake  stm32_common.cmake  uwb-beacon.cmake
hitl/: CMakeLists.txt  actuator_board_emulator.cpp  actuator_board_emulator.h  main.cpp
lib/: CMakeLists.txt  ugfx.cmake
lib/arm-cortex-tools/: CMakeLists.txt
lib/aversive/: CMakeLists.txt
lib/chibios-syscalls/: CMakeLists.txt
lib/cmp/: CMakeLists.txt
lib/cmp_mem_access/: CMakeLists.txt
lib/crc/: CMakeLists.txt
lib/error/: CMakeLists.txt
lib/fatfs/: CMakeLists.txt
lib/filter/: CMakeLists.txt
lib/goap/: CMakeLists.txt
lib/lwip/: CMakeLists.txt
lib/msgbus/: CMakeLists.txt
lib/nanopb/: CMakeLists.txt
lib/parameter/: CMakeLists.txt
lib/parameter_flash_storage/: CMakeLists.txt
lib/pid/: CMakeLists.txt
lib/quadramp/: CMakeLists.txt
lib/test-runner/: CMakeLists.txt
lib/timestamp/: CMakeLists.txt
lib/trace/: CMakeLists.txt
lib/version/: CMakeLists.txt
master-firmware/: CMakeLists.txt
master-firmware/src/: gui.cpp  main.cpp
strategy_simulator/: CMakeLists.txt
ugfx_demo/: CMakeLists.txt
uwb-beacon-firmware/: CMakeLists.txt
wheel-encoder-firmware/src/: encoder.h
(+11 files in other folders)
